<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".SystemConfigure">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="----系统参数配置----"
            android:textSize="30sp"
            android:id="@+id/system_configure_text"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CAN"
                style="@style/parameterTextTheme"
                android:id="@+id/CANtext"/>

            <RadioGroup android:id="@+id/CANchoose"
                        android:contentDescription="CANchoose"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="120"
                    android:id="@+id/CAN120"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="无"
                    android:id="@+id/CAN0"/>

            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/WatchWindow"
                style="@style/parameterTextTheme"
                android:id="@+id/WatchWindow"/>

            <EditText
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="----电机参数配置----"
            android:textSize="30sp"
            android:id="@+id/textView2"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/parameterTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BianMaQi"
                android:id="@+id/textView3"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/parameterTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JianSuBi"
                android:id="@+id/textView4"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/parameterTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EDingDianYa"
                android:id="@+id/textView5"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/parameterTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FengZhiDianYa"
                android:id="@+id/textView6"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/parameterTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SuoDingDianLiu"
                android:id="@+id/textView7"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/parameterTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FengZhiDianLiu"
                android:id="@+id/textView8"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/parameterTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ZuiDaJiaSuDu"
                android:id="@+id/textView9"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/parameterTextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DianJiFangXiang"
                android:id="@+id/textView10"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="返回"
                android:id="@+id/button4"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="进入PID设置"
                android:id="@+id/enterSetPid"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>

