<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                tools:context=".SystemConfigure">

    <android.support.v7.widget.Toolbar
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue">

    </android.support.v7.widget.Toolbar>

    <com.gc.materialdesign.views.ScrollView
        android:layout_below="@+id/toolbar"
        android:id="@+id/scroll"
        android:clickable="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/linearLayout"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                style="@style/parameterPrimaryTextTheme"
                android:text="--系统参数配置--"
                android:id="@+id/system_configure_text"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/CAN"
                    style="@style/parameterTextTheme"
                    android:id="@+id/CANtext"/>

                <RadioGroup android:id="@+id/CANchooseGroup"
                            android:contentDescription="CANchoose"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="120"
                        android:id="@+id/CAN120"/>

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="无"
                        android:id="@+id/CAN0"/>

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/WatchWindow"
                    style="@style/parameterTextTheme"
                    android:id="@+id/WatchWindow"/>

                <EditText
                    android:textColorHighlight="@color/primary_blue"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/WatchWindowNum"/>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:background="@color/divid_color"
                />

            <TextView
                style="@style/parameterPrimaryTextTheme"
                android:text="--电机参数配置--"
                android:id="@+id/textView2"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/parameterTextTheme"
                    android:text="@string/BianMaQi"
                    android:id="@+id/textView3"/>

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/spinner"
                    app:ms_multiline="false"
                    app:ms_floatingLabelText=""
                    app:ms_baseColor="@color/second_color"
                    app:ms_highlightColor="@color/primary_blue"
                    app:ms_errorColor="@color/white"
                    app:ms_arrowColor="@color/second_color"
                    app:ms_arrowSize="16dp"
                    app:ms_alignLabels="true"
                    app:ms_floatingLabelColor="#00FF00"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
                <TextView
                    style="@style/parameterTextTheme"
                    android:text="线速"
                    android:id="@+id/xianSuText"/>

                <EditText
                    android:textColorHighlight="@color/primary_blue"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/xianSu"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/parameterTextTheme"
                    android:text="@string/JianSuBi"
                    android:id="@+id/textView4"/>

                <EditText
                    android:textColorHighlight="@color/primary_blue"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/JianSuBiEditText"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/parameterTextTheme"
                    android:text="@string/EDingDianYa"
                    android:id="@+id/textView5"/>

                <EditText
                    android:textColorHighlight="@color/primary_blue"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/EDingDianYaEditText"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/parameterTextTheme"
                    android:text="@string/FengZhiDianYa"
                    android:id="@+id/textView6"/>

                <EditText
                    android:textColorHighlight="@color/primary_blue"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/FengZhiDianYaEditText"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/parameterTextTheme"
                    android:text="@string/SuoDingDianLiu"
                    android:id="@+id/SuoDingDianLiu"/>

                <EditText
                    android:textColorHighlight="@color/primary_blue"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/SuoDingDianLiuEditText"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/parameterTextTheme"
                    android:text="@string/FengZhiDianLiu"
                    android:id="@+id/textView8"/>

                <EditText
                    android:textColorHighlight="@color/primary_blue"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/FengZhiDianLiuEditText"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/parameterTextTheme"
                    android:text="@string/ZuiDaJiaSuDu"
                    android:id="@+id/textView9"/>

                <EditText
                    android:textColorHighlight="@color/primary_blue"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ZuiDaJiaSuDuEditText"/>

            </LinearLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/parameterTextTheme"
                    android:text="@string/DianJiFangXiang"
                    android:layout_centerVertical="true"
                    android:id="@+id/textView10"/>

                <com.gc.materialdesign.views.ButtonRectangle
                android:background="@color/second_color"
                android:layout_toRightOf="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="反向"
                android:id="@+id/changeDir"/>

                <com.gc.materialdesign.views.ButtonRectangle
                android:background="@color/second_color"
                android:layout_toRightOf="@+id/changeDir"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="测试"
                android:id="@+id/tryDir"/>

            </RelativeLayout>

        </LinearLayout>

    </com.gc.materialdesign.views.ScrollView>

</RelativeLayout>

